Fix scrollbar

--- a/_sass/wtsa.scss
+++ b/_sass/wtsa.scss
@@ -28,3 +28,7 @@ h5,
 h6 {
 	margin-top: 20px;
 }
+
+html {
+	overflow-y: scroll;
+}
